<resources>
    <string name="app_name" translatable="false">ExperimentTwo</string>
    <string name="basic" translatable="false">基础</string>
    <string name="expend" translatable="false">拓展</string>
    <string name="title" translatable="false">中山大学课外体育积分电子认证系统</string>
    <string name="username" translatable="false">用户名:</string>
    <string name="inputName" translatable="false">请输入用户名</string>
    <string name="password" translatable="false">密码:</string>
    <string name="inputPassword" translatable="false">请输入密码</string>
    <string name="student" translatable="false">学生</string>
    <string name="teacher" translatable="false">老师</string>
    <string name="club" translatable="false">社团</string>
    <string name="admin" translatable="false">管理者</string>
    <string name="login" translatable="false">登陆</string>
    <string name="register" translatable="false">注册</string>
</resources>
